<resources>
    <string name="app_name">Digital Compass Finance</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Result</string>
    <string name="wed_01_nov">Wed 01, Nov</string>
    <string name="pkr_88_500_00">PKR 88,500.00</string>
    <string name="income">Income</string>
    <string name="pkr_120_000_00">PKR 120,000.00</string>
    <string name="expenses">Expenses</string>
    <string name="pkr_31_500_00">PKR 31,500.00</string>
    <string name="transactions">Transactions</string>
    <string name="day">Day</string>
    <string name="monthly">Monthly</string>
    <string name="january_30_2024">January 30, 2024</string>
    <string name="settings">Settings</string>
    <string name="user_name_settings">Karina Markina</string>
    <string name="email_settings">markinakarina1122@gmail.com</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="biz">Бизнес</string>
    <string name="client_id">479678845373-4c5td2vikud746ukpi03kkstqh9se4ir.apps.googleusercontent.com</string>
    <string name="add_category">Создание категории</string>
    <string name="select_icon">Выберите иконку</string>
    <string name="select_color">Выберите цвет</string>
    <string name="button_add_category">Добавить</string>
    <string name="Categories">Категории</string>
    <string name="confirm_delete_transaction">Are you sure you want to delete this transaction?</string>
    <string name="confirm_delete_article">Вы уверены, что хотите удалить эту статью?</string>
    <string name="confirm_delete">Подтвердите удаление</string>
    <string name="delete_goal_title">Удалить цель?</string>
    <string name="delete_goal_message">Вы уверены, что хотите удалить эту цель?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="deleting_goal">Удаление цели...</string>
    <string name="delete_goal_error">Ошибка при удалении цели.</string>
    <string name="tab_expenses">Расходы</string>
    <string name="tab_income">Доходы</string>
    <string name="categories_string_settings">Categories</string>
    <string name="accounts">Accounts</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="select_date">Выберите дату</string>
    <string name="Save">Сохранить</string>
    <string name="save_article">Сохранить</string>
    <string name="income1">Доход</string>
    <string name="expense1">Расход</string>
    <string name="select">Выбрать</string>
    <string name="DeleteUser">Удалить аккаунт</string>
    <string name="exit">Exit</string>
    <string name="article_title_ru_hint">Article Title (Russian)</string>
    <string name="article_title_en_hint">Article Title (English)</string>
    <string name="article_description_ru_hint">Article Description (Russian)</string>
    <string name="article_description_en_hint">Article Description (English)</string>
    <string name="article_image_hint">Image URL</string>
    <string name="article_text_ru_hint">Article Text (Russian)</string>
    <string name="article_text_en_hint">Article Text (English)</string>
    <string name="saving_article">Saving article...</string>
    <string name="deleting_article">Удаление статьи...</string>
    <string name="delete_article_error">Ошибка при удалении статьи</string>
    <string name="confirm_deletion">Подтвердите удаление</string>
    <string name="are_you_sure_delete_account">Вы уверены, что хотите удалить этот счет?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="deleting_account">Удаление счета...</string>
    <string name="account_deleted">Счет успешно удален!</string>
    <string name="error_deleting_account">Ошибка при удалении счета: </string>
    <string name="error_account_id_not_available">Не доступен идентификатор счета</string>
    <string name="article_delete_confirmation_title">Подтвердите удаление</string>
    <string name="article_delete_confirmation_message">Вы уверены, что хотите удалить эту статью?</string>
    <string name="article_delete_button">Удалить</string>
    <string name="article_cancel_button">Отмена</string>
    <string name="article_not_found">Статья с id %1$s не найдена.</string>
    <string name="article_load_error">Ошибка при загрузке статьи</string>
    <string name="like_status_updated">Статус лайка обновлен: %1$s</string>
    <string name="error_toggling_like">Ошибка при переключении лайка</string>
    <string name="error_fetching_user_data">Не удалось получить данные пользователя</string>
    <string name="deleting_transaction">Deleting transaction...</string>
    <string name="delete_transaction_error">Error deleting transaction</string>
    <string name="select_country">Выберите страну</string>
    <string name="stats">Stats</string>
    <string name="_3_months">3 Months</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_invalid">Please enter a valid email</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="login_failed">Login Failed: %1$s</string>
    <string name="verify_email">Please verify your email before logging in</string>
    <string name="reset_link_sent">Reset link sent to your email</string>
    <string name="error">Error: %1$s</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="signup_title">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="hint_country">Country</string>
    <string name="hint_currency">Currency</string>
    <string name="gender_label">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="signup_button">SIGN UP</string>
    <string name="google_signin_button">Sign in with Google</string>
    <string name="login_redirect_text">Already a user? Login</string>
    <string name="login_error">Ошибка входа</string>
    <string name="enter_password">Введите пароль</string>
    <string name="email_not_found">Email не найден в системе</string>
    <string name="no_accounts_message">Добавьте счёт</string>
    <string name="google_signin_success">Вход через Google успешен</string>
    <string name="google_auth_error">Ошибка аутентификации: %1$s</string>
    <string name="email_exists_prompt">Пожалуйста, введите пароль для входа.</string>
    <string name="article_name_hint">Article Name</string>
    <string name="article_description_hint">Article Description</string>
    <string name="article_text_hint">Article Text</string>
    <string name="add_article">Add Article</string>
    <string name="add_new_article">Article</string>
</resources>