<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/ScreenBackgroundLogin"
    tools:context=".activity.LoginActivity">

    <!-- TextView по центру сверху -->
    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- CardView внизу -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            style="@style/CardViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/TextColorLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email"
                style="@style/EdittextLogin"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/login_password"
                style="@style/EdittextLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/login_button"
                style="@style/CustomButtonStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:cornerRadius="16dp" />

            <Button
                android:id="@+id/googleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@null"
                android:text="@string/sign_in_with_google"
                style="@style/CustomButtonStyleLoginWithGoogle"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:cornerRadius="16dp" />

            <TextView
                android:id="@+id/forgotPasswordText"
                style="@style/TextColorLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signupRedirectText"
                style="@style/TextColorLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:padding="8dp"
                android:text="@string/not_yet_registered_sign_up"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
